@@ -2,12 +2,12 @@
 <project
     xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.basistech.m2e-code-quality</groupId>
     <artifactId>m2e-code-quality-plugins</artifactId>
-    <version>1.1.4.201906210825-r</version>
+    <version>1.1.5.202109180907-r</version>
     <packaging>pom</packaging>
 
     <scm>
@@ -18,22 +18,19 @@
     <properties>
         <target.platform>oxygen</target.platform>
 
-        <tycho-version>1.4.0</tycho-version>
-        <orbit.version>R20160221192158</orbit.version>
+        <tycho-version>2.4.0</tycho-version>
         <main.basedir>${basedir}</main.basedir>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <java.version>1.7</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
 
-        <updatesite.m2e>http://download.eclipse.org/technology/m2e/releases</updatesite.m2e>
-        <updatesite.eclipse>http://download.eclipse.org/releases/photon</updatesite.eclipse>
-        <updatesite.cs>http://eclipse-cs.sf.net/update</updatesite.cs>
-        <updatesite.pmd>https://dl.bintray.com/pmd/pmd-eclipse-plugin/updates/</updatesite.pmd>
-        <updatesite.findbugs>http://findbugs.cs.umd.edu/eclipse/</updatesite.findbugs>
+        <updatesite.cs>https://checkstyle.org/eclipse-cs-update-site/</updatesite.cs>
+        <updatesite.pmd>https://pmd.github.io/pmd-eclipse-plugin-p2-site/</updatesite.pmd>
+        <updatesite.findbugs>https://findbugs.cs.umd.edu/eclipse/</updatesite.findbugs>
         <updatesite.spotbugs>https://spotbugs.github.io/eclipse/</updatesite.spotbugs>
-        <updatesite.orbit>http://download.eclipse.org/tools/orbit/downloads/drops/${orbit.version}/repository/</updatesite.orbit>
     </properties>
 
     <modules>
@@ -50,55 +47,16 @@
         <module>com.basistech.m2e.code.quality.spotbugs.test</module>
         <module>com.basistech.m2e.code.quality.pmd</module>
         <module>com.basistech.m2e.code.quality.pmd.feature</module>
+        <module>com.basistech.m2e.code.quality.pmd.test</module>
         <module>com.basistech.m2e.code.quality.site</module>
-        <module>oxygen</module>
-        <module>neon</module>
-        <module>mars</module>
-        <module>photon</module>
+        <module>com.basistech.m2e.code.quality.target-platform</module>
     </modules>
-
-    <repositories>
-        <repository>
-            <id>m2e</id>
-            <layout>p2</layout>
-            <url>${updatesite.m2e}</url>
-        </repository>
-        <repository>
-            <id>eclipse</id>
-            <layout>p2</layout>
-            <url>${updatesite.eclipse}</url>
-        </repository>
-        <repository>
-            <id>cs</id>
-            <layout>p2</layout>
-            <url>${updatesite.cs}</url>
-        </repository>
-        <repository>
-            <id>pmd</id>
-            <layout>p2</layout>
-            <url>${updatesite.pmd}</url>
-        </repository>
-        <repository>
-            <id>findbugs</id>
-            <layout>p2</layout>
-            <url>${updatesite.findbugs}</url>
-        </repository>
-        <repository>
-            <id>spotbugs</id>
-            <layout>p2</layout>
-            <url>${updatesite.spotbugs}</url>
-        </repository>
-        <repository>
-            <id>orbit</id>
-            <layout>p2</layout>
-            <url>${updatesite.orbit}</url>
-        </repository>
-    </repositories>
 
     <pluginRepositories>
         <pluginRepository>
-            <id>sonatype-public</id>
-            <url>http://repository.sonatype.org/content/groups/sonatype-public-grid</url>
+            <!-- needed for org.jboss.tools.tycho-plugins:repository-utils in com.basistech.m2e.code.quality.site -->
+            <id>jboss</id>
+            <url>https://repository.jboss.org/nexus/content/groups/public</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
@@ -123,45 +81,41 @@
                     <target>
                         <artifact>
                             <groupId>${project.groupId}</groupId>
-                            <artifactId>${target.platform}</artifactId>
+                            <artifactId>com.basistech.m2e.code.quality.target-platform</artifactId>
                             <version>${project.version}</version>
+                            <classifier>${target.platform}</classifier>
                         </artifact>
                     </target>
-                    <resolver>p2</resolver>
-                    <pomDependencies>consider</pomDependencies>
-                    <ignoreTychoRepositories>true</ignoreTychoRepositories>
-                    <environments>
-                        <environment>
-                            <os>win32</os>
-                            <ws>win32</ws>
-                            <arch>x86</arch>
-                        </environment>
-                        <environment>
-                            <os>win32</os>
-                            <ws>win32</ws>
-                            <arch>x86_64</arch>
-                        </environment>
-                        <environment>
-                            <os>linux</os>
-                            <ws>gtk</ws>
-                            <arch>x86_64</arch>
-                        </environment>
-                        <environment>
-                            <os>macosx</os>
-                            <ws>cocoa</ws>
-                            <arch>x86_64</arch>
-                        </environment>
-                    </environments>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>3.1.12</version>
+                <version>4.3.0</version>
                 <executions>
                     <execution>
                         <goals>
                             <goal>spotbugs</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-toolchains-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <toolchains>
+                        <jdk>
+                            <id>JavaSE-1.8</id>
+                        </jdk>
+                    </toolchains>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>default</id>
+                        <goals>
+                            <goal>toolchain</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -184,11 +138,31 @@
                     <version>${tycho-version}</version>
                     <configuration>
                         <useUIHarness>true</useUIHarness>
+                        <showEclipseLog>true</showEclipseLog>
+                        <trimStackTrace>false</trimStackTrace>
                         <includes>
                             <include>**/*Test.java</include>
                         </includes>
                         <argLine>${tycho.test.jvmArgs}</argLine>
                         <forkedProcessTimeoutInSeconds>7200</forkedProcessTimeoutInSeconds>
+                        <!-- http://wiki.eclipse.org/Eclipse4/RCP/FAQ#Why_won.27t_my_application_start.3F -->
+                        <bundleStartLevel>
+                            <bundle>
+                                <id>org.eclipse.core.runtime</id>
+                                <level>2</level>
+                                <autoStart>true</autoStart>
+                            </bundle>
+                            <bundle>
+                                <id>org.eclipse.equinox.ds</id>
+                                <level>3</level>
+                                <autoStart>true</autoStart>
+                            </bundle>
+                            <bundle>
+                                <id>org.eclipse.equinox.event</id>
+                                <level>3</level>
+                                <autoStart>true</autoStart>
+                            </bundle>
+                        </bundleStartLevel>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -219,7 +193,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <version>3.2.0</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -227,29 +201,79 @@
 
     <profiles>
         <profile>
-            <id>sun-jvm</id>
-            <activation>
-                <property>
-                    <name>java.vendor.url</name>
-                    <value>http://java.sun.com/</value>
-                </property>
-            </activation>
-            <properties>
-                <tycho.test.jvmArgs><![CDATA[-Xmx800m -XX:MaxPermSize=256m]]></tycho.test.jvmArgs>
-            </properties>
-        </profile>
-        <profile>
             <id>osx</id>
             <activation>
-                <property>
-                    <name>java.vendor.url</name>
-                    <value>http://www.apple.com/</value>
-                </property>
+                <os><family>mac</family></os>
             </activation>
             <properties>
-                <tycho.test.jvmArgs><![CDATA[-Xmx800m -XX:MaxPermSize=256m -Dosgi.ws=cocoa -XstartOnFirstThread]]></tycho.test.jvmArgs>
-                <osgi.ws>cocoa</osgi.ws>
+                <tycho.test.jvmArgs>-XstartOnFirstThread</tycho.test.jvmArgs>
             </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.eclipse.tycho</groupId>
+                        <artifactId>target-platform-configuration</artifactId>
+                        <configuration>
+                            <environments>
+                                <environment>
+                                    <os>macosx</os>
+                                    <ws>cocoa</ws>
+                                    <arch>x86_64</arch>
+                                </environment>
+                            </environments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>win</id>
+            <activation>
+                <os><family>windows</family></os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.eclipse.tycho</groupId>
+                        <artifactId>target-platform-configuration</artifactId>
+                        <configuration>
+                            <environments>
+                                <environment>
+                                    <os>win32</os>
+                                    <ws>win32</ws>
+                                    <arch>x86_64</arch>
+                                </environment>
+                            </environments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>linux</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>Linux</name>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.eclipse.tycho</groupId>
+                        <artifactId>target-platform-configuration</artifactId>
+                        <configuration>
+                            <environments>
+                                <environment>
+                                    <os>linux</os>
+                                    <ws>gtk</ws>
+                                    <arch>x86_64</arch>
+                                </environment>
+                            </environments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>sign</id>
@@ -272,6 +296,39 @@
                                 </goals>
                             </execution>
                         </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <activation>
+                <property>
+                    <name>target.platform</name>
+                    <value>2021-09</value>
+                </property>
+            </activation>
+            <properties>
+                <java.version>11</java.version>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.eclipse.tycho</groupId>
+                        <artifactId>tycho-compiler-plugin</artifactId>
+                        <configuration>
+                            <release>11</release>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-toolchains-plugin</artifactId>
+                        <configuration>
+                            <toolchains>
+                                <jdk>
+                                    <id>JavaSE-11</id>
+                                </jdk>
+                            </toolchains>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
